--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "collaborators-ms": "file:",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
