[FEAT](.env.template): Update the envs template with database variables

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,11 @@
 PORT=3002
+
+COLLABORATORS_HOST_MS=localhost
+COLLABORATORS_PORT_MS=3002
+
+POSTGRES_DB_HOST=localhost
+POSTGRES_DB_PORT=5432
+POSTGRES_DB_USERNAME=postgres
+POSTGRES_DB_PASSWORD=postgres
+POSTGRES_DATABASE=collaborators
+POSTGRES_DB_SYNCHRONIZE=true
