[CHORE](.env.template): Update the variables template

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,13 @@
 PORT=3002
+HOST=localhost
 
-COLLABORATORS_HOST_MS=localhost
-COLLABORATORS_PORT_MS=3002
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=collaborators
+DB_SYNCHRONIZE=true
 
-POSTGRES_DB_HOST=localhost
-POSTGRES_DB_PORT=5432
-POSTGRES_DB_USERNAME=postgres
-POSTGRES_DB_PASSWORD=postgres
-POSTGRES_DATABASE=collaborators
-POSTGRES_DB_SYNCHRONIZE=true
+KAFKA_BROKER=localhost:9092
+KAFKA_CLIENT_ID=collaborators
+KAFKA_GROUP_ID=collaborators-consumer
